samples/_failures_safe/1761595078_dbae63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ec3c389.c: In function ‘main’:
./samples/SAFE/__tmp_6ec3c389.c:158:26: error: missing terminating " character
  158 |     mat1.rows = read_int("Enter
      |                          ^~~~~~
./samples/SAFE/__tmp_6ec3c389.c:158:5: error: expected expression at end of input
  158 |     mat1.rows = read_int("Enter
      |     ^~~~
./samples/SAFE/__tmp_6ec3c389.c:158:17: error: too few arguments to function ‘read_int’
  158 |     mat1.rows = read_int("Enter
      |                 ^~~~~~~~
./samples/SAFE/__tmp_6ec3c389.c:15:5: note: declared here
   15 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_6ec3c389.c:158:5: error: expected declaration or statement at end of input
  158 |     mat1.rows = read_int("Enter
      |     ^~~~
